--- a/app/src/main/res/layout/fragment_sign_up_name.xml
+++ b/app/src/main/res/layout/fragment_sign_up_name.xml
@@ -21,32 +21,6 @@
             android:textColor="@color/white"
             android:textSize="25dp" />
 
-        <LinearLayout
-            android:id="@+id/back_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img_close"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/btn_back_arrow" />
-
-            <TextView
-                android:id="@+id/txt_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_close"
-                android:text="@string/str_back"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
-        </LinearLayout>
-
         <ImageView
             android:id="@+id/img_help"
             android:layout_width="35dp"
@@ -153,14 +127,6 @@
 
             </LinearLayout>
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
-                android:indeterminate="false"
-                android:visibility="invisible" />
         </RelativeLayout>
     </ScrollView>
 
@@ -234,5 +200,16 @@
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:indeterminate="false"
+        android:visibility="invisible"
+        android:layout_above="@+id/continue_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="190dp" />
 
 </RelativeLayout>
