--- a/app/src/main/res/layout/fragment_sign_up_phone_fax.xml
+++ b/app/src/main/res/layout/fragment_sign_up_phone_fax.xml
@@ -22,31 +22,6 @@
             android:textColor="@color/white"
             android:textSize="25dp" />
 
-        <LinearLayout
-            android:id="@+id/back_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img_close"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/btn_back_arrow" />
-
-            <TextView
-                android:id="@+id/txt_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_close"
-                android:text="@string/str_back"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
-        </LinearLayout>
 
         <ImageView
             android:id="@+id/img_help"
@@ -100,13 +75,13 @@
 
                     <EditText
                         android:id="@+id/phone"
+                        android:inputType="phone"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
                         android:gravity="center"
-                        android:paddingBottom="@dimen/editext_padding"
-                        android:text="+2340861539278" />
+                        android:paddingBottom="@dimen/editext_padding" />
 
                     <TextView
                         android:id="@+id/txt_firstname_label"
@@ -116,6 +91,17 @@
                         android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_phone"
                         android:textSize="15dp" />
+
+                    <TextView
+                        android:id="@+id/txt_code"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="+1"
+                        android:textSize="20dp"
+                        android:paddingBottom="@dimen/label_padding"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@+id/txt_firstname_label"
+                        android:layout_marginStart="15dp" />
                 </RelativeLayout>
 
             </LinearLayout>
@@ -138,13 +124,13 @@
 
                     <EditText
                         android:id="@+id/fax"
+                        android:inputType="number"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
                         android:gravity="center"
-                        android:paddingBottom="@dimen/editext_padding"
-                        android:text="88822233" />
+                        android:paddingBottom="@dimen/editext_padding" />
 
                     <TextView
                         android:id="@+id/fax_label"
